--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,16 +3,15 @@ ktor:
         modules:
             - com.mlg.ApplicationKt.module
     deployment:
-        port: 8099
-jwt:
-  domain: "https://jwt-provider-domain/"
-  audience: "jwt-audience"
-  realm: "ktor sample app"
+        port: 8095
+security:
+  login: $API_LOGIN
+  password: $API_PWD
 db:
   mongo:
-    user: pktouradmin
-    password: pwd
-    host: 127.0.0.1
-    port: 27018
+    user: $MONGO_USER
+    password: $MONGO_PWD
+    host: database #database for docker - 127.0.0.1 for local
+    port: 27017 # 27017 for docker - 27018 for local
     database:
       name: pktouradmin
